--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Document</title>
 </head>
 <body>
-  <main class="main-container">
-    <section class="box-container">
+  <main class="main-container" >
+    <section class="box-container" id="boxContainer" >
       <img src="./images/icon-star.svg" id="star"alt="iconstar">
       <div class="feedback">
         <h1>How did we do?</h1>
@@ -21,8 +21,8 @@
         </p>
       </div>
       <div class="circles">
-        <div class="circle">1</div>
-        <div class="circle">2</div>
+        <div class="circle ">1</div>
+        <div class="circle ">2</div>
         <div class="circle">3</div>
         <div class="circle">4</div>
         <div class="circle">5</div>
@@ -30,13 +30,10 @@
       <button class="button-submit">Submit</button>
 
     </section>
-  </main>
-
-  <main class="main-container">
-    <section class="box-container">
+    <section class="box-container hide" id="boxContainer2">
       <img src="./images/illustration-thank-you.svg" id="thankyou"  alt="thankyou">
 
-      <div class="rating-div"> You selected 4 out of 5
+      <div class="rating-div"> You selected <span class="score-number"></span>  out of 5
 
       </div>
        <div class="feedback feedback2">
@@ -48,6 +45,11 @@
 
     </section>
   </main>
+
+
+
+
   
+  <script src="./main.js"></script>
 </body>
 </html>
